`Added mobile menu toggle functionality to multiple HTML templates`

--- a/templates/weapons.html
+++ b/templates/weapons.html
@@ -46,5 +46,8 @@
         </div>
     </nav>
     This is the weapon page
+    <script>   document.getElementById('mobile-menu-button').addEventListener('click', function() {
+        document.getElementById('mobile-menu').classList.toggle('hidden');
+    });</script>
 </body>
 </html>
