--- a/templates/Engg&Tech.html
+++ b/templates/Engg&Tech.html
@@ -46,6 +46,8 @@
         </div>
     </nav>
     <h1>This is the engg and tech page</h1>
-
+<script>   document.getElementById('mobile-menu-button').addEventListener('click', function() {
+    document.getElementById('mobile-menu').classList.toggle('hidden');
+});</script>
 </body>
 </html>
