--- a/templates/crafts.html
+++ b/templates/crafts.html
@@ -46,5 +46,10 @@
         </div>
     </nav>
     This is the chat page
+    <script>
+           document.getElementById('mobile-menu-button').addEventListener('click', function() {
+            document.getElementById('mobile-menu').classList.toggle('hidden');
+        });
+    </script>
 </body>
 </html>
