--- a/templates/crafts.html
+++ b/templates/crafts.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <title>Document</title>
+    <title>Crafts</title>
 </head>
 <body>
     <nav class="bg-blue-900 text-white shadow-lg">
@@ -108,8 +108,6 @@
         &copy; 2025 IKS Project. All Rights Reserved.
         @Viraj Gavade
     </footer>
-   
-    This is the chat page
     <script>
            document.getElementById('mobile-menu-button').addEventListener('click', function() {
             document.getElementById('mobile-menu').classList.toggle('hidden');
